# major_life_event

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
.trunk/: trunk.yaml
docs/: rules.md
src/: agent.cpp  agent.hpp  environment.cpp  environment.hpp
tests/: test_env.cpp
